--- a/ui/src/components/NotificationsCentre/notifications.scss
+++ b/ui/src/components/NotificationsCentre/notifications.scss
@@ -47,7 +47,6 @@
   margin: 0 auto;
   width: 100%;
 
-  
   .msg {
     font-size: 1rem;
     font-weight: 300;
@@ -70,14 +69,14 @@ i {
   border-bottom: 1px solid #cecece;
   display: grid;
   font-family: Nunito, Arial, Helvetica, sans-serif;
-  grid-template-columns: 50% repeat(2, 25%);
+  grid-template-columns: 40% repeat(2, 25%) 10%;
   height: 100%;
   justify-self: flex-start;
   list-style: none;
   margin: 0;
   padding: 0;
   width: 100%;
-  
+
   li {
     align-items: center;
     color: #191919;
